feat: 增强基金板块标签投研能力
